# Office_Codes

./: .gitignore
Ludo/: README.md
Ludo/backend/: app.py  requirements.txt
Ludo/frontend/: index.html  package-lock.json  package.json
Ludo/frontend/src/: App.jsx  Board.jsx  main.jsx  styles.css
Ros2/samdhan_ng_processing/: .dockerignore  .env  .env.example  DOCKER.md  Dockerfile  compose.deploy.yaml  compose.yaml
Ros2/samdhan_ng_processing/docker/: ros_entrypoint.sh
Ros2/samdhan_ng_processing/install/: local_setup.sh  setup.sh
Ros2/samdhan_ng_processing/install/chlorophyll_node/share/chlorophyll_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Ros2/samdhan_ng_processing/install/chlorophyll_node/share/chlorophyll_node/config/: pallete.txt
Ros2/samdhan_ng_processing/install/chlorophyll_node/share/chlorophyll_node/launch/: chlorophyll_node.launch.py
Ros2/samdhan_ng_processing/log/: latest_build
Ros2/samdhan_ng_processing/src/: Main_test.py  chloro.txt  color.txt
arduino/connector/: connector.ino  serial_logger.py
arduino/shower/: dashboard.h  shower.ino
arduino/tapasda/: demo.ino
astra-card-prototype/: .gitignore  README.md  docker-compose.yml
astra-card-prototype/backend/: Dockerfile  requirements.txt
astra-card-prototype/backend/app/: __init__.py  card_data.py  game_engine.py  main.py  models.py  (+2 more)
astra-card-prototype/frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.js  vite.config.ts
astra-card-prototype/shared/: cards.json
(+23 files in other folders)
